2016-05-24  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp: modified
	svn keyword, $Id$, removed from all files
	files exported to git
	version 1.2.1
	
	* source/decexml.cpp: removed

2015-09-28  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrAngDistSmooth): update
	smoothing algorithm changed

2015-09-22  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcsurr.cpp (gfrUFindRange): bug gix
	index but at the highest bin

2015-09-19  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/dece.cpp (DeceBanner): update
	* tools/decemf4.cpp: new file
	create MF4 MT2 from DeCE smoothangdist/reconangdist output.

2015-09-18  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrAngDistSmooth): new function
	average scattering Legendre coefficients generated from resonances

2015-09-17  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcsurr.cpp: updated
	* source/gfr.cpp (gfrPtCross): updated
	add unresolved resonance calculation

	* source/deceprocpoint.cpp: new file
	create pointwise cross sections, and store in temporal MTs

2015-09-13  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrenergy.cpp: new file
	determine energy grid for resonance reconstruction

2015-09-12  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfr.cpp (gfrBackGround): new function
	get background cross section in MF3

	* source/decepoint.cpp (delpoint): new function
	multi-point delete

2015-04-27  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/deceread.cpp (readCSdata): modified
	adjusted ofset values to a new CoH output file

	* source/endflib.cpp (ENDFMergeXdata): modified
	check if the highest energies in two libs

2015-01-23  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/coupling.cpp: replaced
	copied from CoH3

2014-07-22  KAWANO Toshihiko  <kawano@lanl.gov>

	* source/gfrcross.cpp (gfrLegendreCoefficient): new function
	* source/gfr.cpp (gfrAngDist): new function
	calculate angular distribution from resonances

	* source/endflib.cpp (ENDFInterpolation): modified