@@ -1,0 +1,23 @@
+.DS_Store
+*.o
+.deps/
+.dirstamp
+/autom4te.cache
+/autoscan.log
+/config.h
+/config.log
+/config.status
+/Makefile
+/stamp-h1
+/source/dece.dSYM
+/source/Makefile
+/source/dece
+/tools/decemacs
+/tools/decemf12
+/tools/decemf4
+/tools/decemf5
+/tools/decemf6
+/example/example1
+/example/example2
+
+
